addison:Update tether overlays
Change-Id: I2a4226b9f3affa2b44b58933205ad8e2ec6f7afb

Signed-off-by: klozz <xxx.reptar.rawrr.xxx@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -203,6 +203,7 @@
         <item>wlan0</item>
         <item>wigig0</item>
         <item>softap0</item>
+        <item>"wlan1"</item>
     </string-array>
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
