--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -262,6 +262,7 @@
          If no value is found for the rat-name in use, the system default will be applied.
     -->
     <string-array name="config_mobile_tcp_buffers">
+        <item>5gnr:2097152,6291456,16777216,512000,2097152,8388608</item>
         <item>lte:524288,1048576,8388608,262144,524288,4194304</item>
         <item>lte_ca:524288,1048576,8388608,262144,524288,4194304</item>
         <item>umts:131072,262144,1452032,4096,16384,399360</item>
