--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -467,4 +467,7 @@
          before setting power profiles on boot. -->
     <bool name="config_waitForMpctlOnBoot">true</bool>
 
+    <!-- Device supports WPA3 -->
+    <bool translatable="false" name="config_wifi_wpa3_supported">false</bool>
+
 </resources>
