--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -439,6 +439,8 @@
         <item>"/system/framework/boot.vdex"</item>
         <item>"/system/framework/arm64/boot-core-libart.oat"</item>
         <item>"/system/framework/boot-core-libart.vdex"</item>
+        <item>"/system/framework/boot-QPerformance.vdex"</item>
+        <item>"/system/framework/boot-Uxformance.vdex"</item>
     </string-array>
 
     <!-- Should the pinner service pin the Home application? -->
