addison pin and iop to manifest
Signed-off-by: klozz <klozz@vivaldi.net>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -441,6 +441,8 @@
         <item>"/system/framework/boot-core-libart.vdex"</item>
         <item>"/system/framework/boot-QPerformance.vdex"</item>
         <item>"/system/framework/boot-Uxformance.vdex"</item>
+        <item>"/system/framework/arm64/boot-QPerformance.oat"</item>
+        <item>"/system/framework/arm64/boot-UxPerformance.oat"</item>
     </string-array>
 
     <!-- Should the pinner service pin the Home application? -->
